assets/css/output.css
/* ... */
.text-xl {
  font-size: 1.25rem;
  line-height: 1.75rem;
}

.text-xs {
  font-size: 0.75rem;
  line-height: 1rem;
}

.text-\[1\.375rem\] {
  font-size: 1.375rem;
}

.text-\[1rem\] {
  font-size: 1rem;
}

.text-\[1\.2rem\] {
  font-size: 1.2rem;
}

.text-\[4\.5rem\] {
  font-size: 4.5rem;
}

.text-\[1\.75rem\] {
  font-size: 1.75rem;
}

.text-\[1\.25rem\] {
  font-size: 1.25rem;
}

.text-\[0\.875rem\] {
  font-size: 0.875rem;
}

.text-5xl {
  font-size: 3rem;
  line-height: 1;
}

.text-\[0\.813rem\] {
  font-size: 0.813rem;
}

.text-\[1\.5rem\] {
  font-size: 1.5rem;
}

.font-normal {
  font-weight: 400;
}

.font-light {
  font-weight: 300;
}

.font-medium {
  font-weight: 500;
}

.font-bold {
  font-weight: 700;
}

.font-semibold {
  font-weight: 600;
}

.font-thin {
  font-weight: 100;
}

.uppercase {
  text-transform: uppercase;
}

.lowercase {
  text-transform: lowercase;
}

.capitalize {
  text-transform: capitalize;
}

.italic {
  font-style: italic;
}

.leading-\[3\.75rem\] {
  line-height: 3.75rem;
}

.leading-9 {
  line-height: 2.25rem;
}

.leading-10 {
  line-height: 2.5rem;
}

.leading-\[2\.5rem\] {
  line-height: 2.5rem;
}

.leading-\[50px\] {
  line-height: 50px;
}

.leading-\[3rem\] {
  line-height: 3rem;
}

.leading-8 {
  line-height: 2rem;
}

.leading-\[1\.2\] {
  line-height: 1.2;
}

.leading-7 {
  line-height: 1.75rem;
}

.leading-\[4\.5rem\] {
  line-height: 4.5rem;
}

.leading-\[3\.25rem\] {
  line-height: 3.25rem;
}

.leading-\[1\.125rem\] {
  line-height: 1.125rem;
}

.leading-\[3\.125rem\] {
  line-height: 3.125rem;
}

.leading-\[53px\] {
  line-height: 53px;
}

.tracking-widest {
  letter-spacing: 0.1em;
}

.-tracking-\[0\.009rem\] {
  letter-spacing: -0.009rem;
}

.tracking-wider {
  letter-spacing: 0.05em;
}

.tracking-wide {
  letter-spacing: 0.025em;
}

.text-white {
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

.text-slate-900 {
  --tw-text-opacity: 1;
  color: rgb(15 23 42 / var(--tw-text-opacity));
}

.text-slate-100 {
  --tw-text-opacity: 1;
  color: rgb(241 245 249 / var(--tw-text-opacity));
}

.text-green-100 {
  --tw-text-opacity: 1;
  color: rgb(220 252 231 / var(--tw-text-opacity));
}

.text-lime-200 {
  --tw-text-opacity: 1;
  color: rgb(217 249 157 / var(--tw-text-opacity));
}

.text-lime-100 {
  --tw-text-opacity: 1;
  color: rgb(236 252 203 / var(--tw-text-opacity));
}

.text-white\/80 {
  color: rgb(255 255 255 / 0.8);
}

.text-black\/70 {
  color: rgb(0 0 0 / 0.7);
}

.text-green-500 {
  --tw-text-opacity: 1;
  color: rgb(34 197 94 / var(--tw-text-opacity));
}

.text-white\/50 {
  color: rgb(255 255 255 / 0.5);
}

.text-\[\#3b5998\] {
  --tw-text-opacity: 1;
  color: rgb(59 89 152 / var(--tw-text-opacity));
}

.text-\[\#00aced\] {
  --tw-text-opacity: 1;
  color: rgb(0 172 237 / var(--tw-text-opacity));
}

.text-\[\#dc4a38\] {
  --tw-text-opacity: 1;
  color: rgb(220 74 56 / var(--tw-text-opacity));
}

.text-\[\#0077b5\] {
  --tw-text-opacity: 1;
  color: rgb(0 119 181 / var(--tw-text-opacity));
}

.text-\[\#d93175\] {
  --tw-text-opacity: 1;
  color: rgb(217 49 117 / var(--tw-text-opacity));
}

.text-\[\#fe0002\] {
  --tw-text-opacity: 1;
  color: rgb(254 0 2 / var(--tw-text-opacity));
}

.text-\[\#bd081b\] {
  --tw-text-opacity: 1;
  color: rgb(189 8 27 / var(--tw-text-opacity));
}

.text-black {
  --tw-text-opacity: 1;
  color: rgb(0 0 0 / var(--tw-text-opacity));
}

.text-green-400 {
  --tw-text-opacity: 1;
  color: rgb(74 222 128 / var(--tw-text-opacity));
}

.text-lime-500 {
  --tw-text-opacity: 1;
  color: rgb(132 204 22 / var(--tw-text-opacity));
}

.text-\[\#689f38\] {
  --tw-text-opacity: 1;
  color: rgb(104 159 56 / var(--tw-text-opacity));
}

.text-\[\#00cd93\] {
  --tw-text-opacity: 1;
  color: rgb(0 205 147 / var(--tw-text-opacity));
}

.text-gray-500 {
  --tw-text-opacity: 1;
  color: rgb(107 114 128 / var(--tw-text-opacity));
}

.text-\[\#888888\] {
  --tw-text-opacity: 1;
  color: rgb(136 136 136 / var(--tw-text-opacity));
}

.text-\[\#b9b9b9\] {
  --tw-text-opacity: 1;
  color: rgb(185 185 185 / var(--tw-text-opacity));
}

.text-\[\#999999\] {
  --tw-text-opacity: 1;
  color: rgb(153 153 153 / var(--tw-text-opacity));
}

.text-\[\#fff\] {
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

.text-\[\#c8e6c9\] {
  --tw-text-opacity: 1;
  color: rgb(200 230 201 / var(--tw-text-opacity));
}

.text-\[\#9ccc65\] {
  --tw-text-opacity: 1;
  color: rgb(156 204 101 / var(--tw-text-opacity));
}

.text-gray-400 {
  --tw-text-opacity: 1;
  color: rgb(156 163 175 / var(--tw-text-opacity));
}

.text-\[\#66bb6a\] {
  --tw-text-opacity: 1;
  color: rgb(102 187 106 / var(--tw-text-opacity));
}

.text-\[\#666666\] {
  --tw-text-opacity: 1;
  color: rgb(102 102 102 / var(--tw-text-opacity));
}

.\!text-black {
  --tw-text-opacity: 1 !important;
  color: rgb(0 0 0 / var(--tw-text-opacity)) !important;
}

.\!text-white {
  --tw-text-opacity: 1 !important;
  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
}

.opacity-0 {
  opacity: 0;
}

.opacity-100 {
  opacity: 1;
}

.shadow-2xl {
  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

.shadow-md {
  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

.shadow-sm {
  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}
/* ... */

